--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -15,8 +15,12 @@
     color: red
     font-weight: bold
 
+html
+    overscroll-behavior: none
+
 body
     overflow: hidden
+    overscroll-behavior: none
 
 body.piju-local .piju-show-if-remote-mode, body.piju-local .queue-button, body.piju-remote .piju-hide-if-remote-mode
     display: none !important
